testsuite/tests/parsing/pr6604.ml.reference
File "pr6604.ml", line 1, characters 0-1:
Error: Syntax error
